Aligned top score results to the left and fixed bug of wine cork logo showing during loading screen.

--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -661,6 +661,8 @@ button.winetoolsbutton {
     display: flex;
     align-items: center;
     margin:auto;
+    z-index: 100000;
+    position: relative;
   }
   
 
